--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@sendgrid/mail": "^8.1.6",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "express-session": "^1.18.2",
     "firebase-admin": "^13.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
