--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 
 # SENDGRID_API_KEY=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
 # FROM_EMAIL=2852002priya@gmail.com
-SENDGRID_API_KEY=
-FROM_EMAIL=
+SENDGRID_API_KEY=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
+FROM_EMAIL=2852002priya@gmail.com
 # SMTP (Alternative to SendGrid)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
