--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase-admin": "^13.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.29",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
@@ -36,7 +37,7 @@
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
     "stripe": "^19.0.0",
-    "twilio": "^5.10.5",
+    "twilio": "^5.10.6",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
