--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "socket.io": "^4.8.1",
     "stripe": "^19.0.0",
     "twilio": "^5.10.6",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
