--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "connect-mongo": "^5.1.0",
+    "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
     "firebase-admin": "^13.5.0",
@@ -42,6 +43,12 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "@types/cookie-session": "^2.0.49",
+    "@types/express": "^5.0.6",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.17",
+    "nodemon": "^3.1.11",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
   }
 }
